--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.32",
 		"svelte": "^4.2.7",
+		"tailwindcss": "^3.4.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-	  "yarn": "^1.22.21",
-	  "js-cookie": "^3.0.5"
+		"js-cookie": "^3.0.5",
+		"yarn": "^1.22.21"
 	}
 }
