--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"dompurify": "^3.0.6",
 		"js-cookie": "^3.0.5",
 		"marked": "^11.1.0",
 		"yarn": "^1.22.21"
